--- a/demo.html
+++ b/demo.html
@@ -5,21 +5,59 @@
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/main.css" rel="stylesheet">
     <script>
-        const auCtx = new AudioContext()
-        var url = 'https://06mdkod2.qcloud.la/weapp/uAudio'
-        var urls = 'https://418980938.omoz.club/weapp/uAudio'
         $(function(){
-            console.log(auCtx)
+            const auCtx = new AudioContext()
+            var url = 'https://06mdkod2.qcloud.la/weapp/uAudio'
+            var urls = 'https://418980938.omoz.club/weapp/uAudio'
+            var key_size = {}
+            //console.log(auCtx)
             $("#btn-all").on("click", function(){
                 $.ajax({
                     url: url,
                     type: "post",
                     crossDomain: true,
                     success: function(data){
-                        console.log(data)
+                        var t_list = data.data.t_list
+                        var content = data.data.content
+                        initMap(content)
+                        initTable(t_list)
                     }
                 });
             })
+
+            var initMap = function(content){
+                console.log("init_map")
+                //console.log(t_list)
+                for (let val of content){
+                    var Key = val.Key
+                    var kk = Key.substr(0, Key.indexOf("."))
+                    key_size[kk] = parseInt(val.Size)
+                }
+            }
+
+            var initTable = function(t_list){
+                console.log("init_table")
+                //console.log(t_list)
+                //t_list.sort((a,b) => {return a.c_name > b.c_name})
+                //console.log(t_list)
+                //console.log(key_size)
+                for (let [i,v] of t_list.entries()){
+                    console.log(v)
+                    var line = i+1
+                    var file_id = v.file_id
+                    var c_name = v.c_name
+                    var s_name = v.s_name
+                    var src = v.src_audio
+                    var c_date = v.c_date
+                    var cate = v.cate
+                    var level = v.level
+                    var ski = v.ski
+                    var ver = v.ver
+                    var status = v.status
+                    var d_td = `<tr><td>${line}</td><td>${level}</td><td>${file_id}</td><td>${c_name}</td><td>${ski}</td><td>${ver}</td><td>${s_name}</td><td>${cate}</td><td>${c_date}</td><td>${status}</td></tr>`
+                    $("tbody").append(d_td)
+                }
+            }
         })
 
 
@@ -54,31 +92,19 @@
         <table class="table table-bordered table-striped table-hover">
             <thead>
                 <tr>
-                <th>#</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Username</th>
+                    <th>#</th>
+                    <th>level</th>
+                    <th>file_id</th>
+                    <th>c_name</th>
+                    <th>ski</th>
+                    <th>ver</th>
+                    <th>s_name</th>
+                    <th>cate</th>
+                    <th>c_date</th>
+                    <th>status</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-                </tr>
-                <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-                </tr>
-                <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-                </tr>
             </tbody>
         </table>
     </div>
