--- a/demo.html
+++ b/demo.html
@@ -1,4 +1,5 @@
 <html>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <header>
     <script src="./js/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="./js/bootstrap.min.js" type="text/javascript"></script>
