--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,6 @@
         $(function(){
             window.AudioContext = window.AudioContext||window.webkitAudioContext;
             const context = new AudioContext();
-            var soundBuffer = null;
             const url = 'https://06mdkod2.qcloud.la/weapp/uAudio'
             const urls = 'https://418980938.omoz.club/weapp/uAudio'
             const pre = "https://audio-1256378396.cos.ap-guangzhou.myqcloud.com/"
@@ -34,15 +33,18 @@
             var loadDogSound = function(url){
                 var request = new XMLHttpRequest();
                 request.open('GET', url, true);
-                request.setRequestHeader('Accept','text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8')
-                request.setRequestHeader('Content-Type','audio/mp3')
+                //request.setRequestHeader('Accept','text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8')
+                //request.setRequestHeader('Content-Type','audio/mp3')
                 request.responseType= 'arraybuffer';
                 
                 //下面就是对音频文件的异步解析
                 request.onload = function(){
                         context.decodeAudioData(request.response,function(buffer){
-                        soundBuffer = buffer
-                    },onError)
+                            console.log(buffer)
+                            playSound(buffer)
+                    },function(err){
+                        console.log(err)
+                    })
                 }
 
                 request.send()
@@ -50,7 +52,6 @@
 
             var playSound = function (buffer){
                 var source = context.createBufferSource();
-                source = context.createBuffersource();//创建一个音频源 相当于是装音频的容器
                 source.buffer = buffer;//  告诉音频源 播放哪一段音频
                 source.connect(context.destination);// 连接到输出源
                 source.start();//开始播放
@@ -77,6 +78,7 @@
 
             var initTableContent = function(content){
                 console.log("init_content")
+                $("#t_content > tbody tr").remove()
                 //console.log(file_ids)
                 //console.log(t_audio)
                 //t_audio.sort((a,b) => {return a.c_name > b.c_name})
@@ -96,7 +98,7 @@
                     var ver = ks[3]
                     var size = v.Size
                     var u_date = v.LastModified
-                    var d_td = `<tr><td>${line}</td><td>${level}</td><td class="src_play" id="${src}">${file_id}</td><td>${s_name}</td><td>${ski}</td><td>${ver}</td><td>${size}</td><td>${u_date}</td></tr>`
+                    var d_td = `<tr><td>${line}</td><td>${level}</td><td class="src_play pointer" id="${src}">${file_id}</td><td class="pointer">${s_name}</td><td>${ski}</td><td>${ver}</td><td>${size}</td><td>${u_date}</td></tr>`
                     $("#t_content > tbody").append(d_td)
                 }
 
@@ -106,7 +108,6 @@
                     var src_audio = $(this).attr("id")
                     console.log(src_audio)
                     loadDogSound(src_audio)
-                    console.log(soundBuffer)
                 })
             }
 
