--- a/demo.html
+++ b/demo.html
@@ -9,8 +9,10 @@
         $(function(){
             window.AudioContext = window.AudioContext||window.webkitAudioContext;
             const context = new AudioContext();
-            const url = 'https://06mdkod2.qcloud.la/weapp/uAudio'
-            const urls = 'https://418980938.omoz.club/weapp/uAudio'
+            const url = 'https://06mdkod2.qcloud.la/weapp/queryAudio'
+            const publishUrl = 'https://06mdkod2.qcloud.la/weapp/publishAudio'
+            const urls = 'https://418980938.omoz.club/weapp/queryAudio'
+            const publishUrls = 'https://418980938.omoz.club/weapp/publishAudio'
             const pre = "https://audio-1256378396.cos.ap-guangzhou.myqcloud.com/"
             var key_size = {}
             var file_ids = new Array();
@@ -109,7 +111,8 @@
             var initBoxShadow = function(shadow){
                 console.log("initBoxShadow")
                 var s_shadow = shadow + ""
-                $("#btn-save").data("s_shadow", s_shadow)
+                $("#s-shadow").val(s_shadow)
+                //$("#btn-save").data("s_shadow", s_shadow)
                 $("#box-shadow > span").remove()
                 for (let v of shadow){
                     var d_sd = `<span class="ele" style="height:${v}px"></span>`
@@ -186,26 +189,41 @@
             }
 
             $("#s-title,#s-serifu,#s-roma").on("keyup",function(){
+                var _val = $(this).val().trim()
+                $(this).val(_val)
                 var cur_id = $(this).attr("id")
                 var p_id = "#p" + cur_id.substr(1)
                 //console.log(cur_id, p_id)
-                $(p_id).text($(this).val())
+                $(p_id).text(_val)
             })
 
             $("#btn-save").on("click",function(){
                 console.log("save")
-                var title = $("#p-title").text()
-                var serifu = $("#p-serifu").text()
-                var roma = $("#p-roma").text()
-                var s_shadow = $(this).data("s_shadow")
-                console.log(s_shadow)
-                var src_image = $("#up-image").val()
-                console.log(src_image)
+                var $title = $("#s-title")
+                if (!$title.val()){
+                    $title.focus()
+                    return
+                }
+                var formData = new FormData($("#my-form")[0]);
+                $.ajax({
+                    type: "post",
+                    crossDomain: true,
+                    url: publishUrl,
+                    data: formData,
+                    cache: false,
+                    processData: false,
+                    contentType: false,
+                    success: function(data){
+                        console.log(data)
+                        $("#modal-to").modal("hide")
+                    }
+                })
             })
 
             var initModal = function(file_id, src_audio){
                 $("#m-title").text(file_id)
                 $("#src-audio").text(src_audio)
+                $("#s-file_id").val(file_id)
                 $("#s-title").val("")
                 $("#s-serifu").val("")
                 $("#s-roma").val("")
@@ -275,7 +293,7 @@
                 $("#modal-to").modal("show")
             })
 
-            $("#up-image").on("change",function(){
+            $("#file").on("change",function(){
                 var $img = $(this).next("img")
                 var $file = $(this);
                 var fileObj = $file[0];
@@ -318,37 +336,45 @@
                         </div>
 
                         <div class="modal-body">
-                            <div class="box-content">
-                                <input id="up-image" class="up-image pointer" type="file">
-                                <img class="box-img" src="">
-                                <div class="box-text">
-                                    <p id="src-audio" class="hidden"></p>
-                                    <strong><p id="p-title" class="text-primary"></p></strong>
-                                    <p id="p-serifu" class="text-primary"></p>
-                                    <p id="p-roma" class="text-primary"></p>
-                                </div>
-                            </div>
-                            <div id="box-shadow" class="box-shadow">
-                                <div id="btn-play" class="box-img pointer"></div>
-                            </div>
-                            <hr>
-                            <form id="form-rule" class="form-horizontal">
+                            <form id="my-form" class="form-horizontal" enctype="multipart/form-data">
+                                <input id="s-shadow" name="shadow" type="hidden">
+                                <input id="s-file_id" name="file_id" type="hidden">
+                                <div class="box-content">
+                                        <input id="file" name="file" class="up-image pointer" type="file">
+                                        <img class="box-img" src="">
+                                        <div class="box-text">
+                                            <p id="src-audio" class="hidden"></p>
+                                            <strong><p id="p-title" class="text-primary"></p></strong>
+                                            <p id="p-serifu" class="text-primary"></p>
+                                            <p id="p-roma" class="text-primary"></p>
+                                        </div>
+                                    </div>
+                                    <div id="box-shadow" class="box-shadow">
+                                        <div id="btn-play" class="box-img pointer"></div>
+                                    </div>
+                                    <hr>
                                 <div class="form-group">
-                                    <label for="filter-startw" class="text-primary col-sm-2 control-label">标题:</label>
+                                    <label class="text-primary col-sm-2 control-label">式神名字:</label>
                                     <div class="col-sm-9">
-                                        <input id="s-title" type="text" class="form-control">
+                                        <input id="s-c_name" name="c_name" type="text" class="form-control">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="filter-endw" class="text-primary col-sm-2 control-label">台词:</label>
+                                    <label class="text-primary col-sm-2 control-label">标题:</label>
                                     <div class="col-sm-9">
-                                    <input id="s-serifu" type="text" class="form-control">
+                                        <input id="s-title" name="title" type="text" class="form-control">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="filter-notc" class="text-primary col-sm-2 control-label">罗马音:</label>
+                                    <label class="text-primary col-sm-2 control-label">台词:</label>
                                     <div class="col-sm-9">
-                                        <input id="s-roma" type="text" class="form-control">
+                                    <input id="s-serifu" name="serifu" type="text" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="text-primary col-sm-2 control-label">罗马音:</label>
+                                    <div class="col-sm-9">
+                                        <input id="s-roma" name="roma" type="text" class="form-control">
                                     </div>
                                 </div>
                             </form>
